[feat]: a fullscreen react custom hook

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
@@ -47,6 +48,8 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@babel/core": "^7.15.0"
+    "@babel/core": "^7.15.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
