--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "author": "Di Meglio Giovanna",
   "license": "MIT",
+  "homepage": "https://reactivegio.github.io/fullscreen-react_hook/",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.2.3",
@@ -16,6 +17,7 @@
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "5.3.2",
     "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
@@ -28,7 +30,9 @@
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js && node -e \"console.log('open browser at http://localhost:8081/index.html');\" ",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "modulePathIgnorePatterns": [
