--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js && node -e \"console.log('open browser at http://localhost:8081/index.html');\" ",
     "build": "webpack --config webpack.prod.js",
-    "predeploy": "yarn build",
+    "predeploy": "webpack --config webpack.prod.js",
     "deploy": "gh-pages -d build"
   },
   "jest": {
